@@ -1,5 +1,5 @@
 /*
- *  Copyright 2018-2023 the original author or authors.
+ *  Copyright 2018-2024 the original author or authors.
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -28,14 +28,14 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import reactor.core.publisher.Flux;
 import reactor.test.StepVerifier;
 
-import java.util.Collections;
+import java.util.Set;
 
 import static org.mockito.BDDMockito.given;
 
 /**
  * group members service test
  *
- * @author liwenqiang 2021/6/14 11:10
+ * @author liwenqiang 2021-06-14 11:10
  **/
 @ExtendWith(MockitoExtension.class)
 class GroupMembersServiceImplTest {
@@ -44,27 +44,27 @@ class GroupMembersServiceImplTest {
     private GroupMembersRepository groupMembersRepository;
 
     @InjectMocks
-    private GroupMembersServiceImpl userGroupService;
+    private GroupMembersServiceImpl groupMembersService;
 
     @Test
     void members() {
         given(this.groupMembersRepository.findByGroupId(Mockito.anyLong())).willReturn(Flux.just(Mockito.mock(GroupMembers.class)));
 
-        StepVerifier.create(userGroupService.members(1L)).expectNextCount(1).verifyComplete();
+        StepVerifier.create(groupMembersService.members(Mockito.anyLong())).expectNextCount(1).verifyComplete();
     }
 
     @Test
     void groups() {
         given(this.groupMembersRepository.findByUsername(Mockito.anyString())).willReturn(Flux.just(Mockito.mock(GroupMembers.class)));
 
-        StepVerifier.create(userGroupService.groups("test")).expectNextCount(1).verifyComplete();
+        StepVerifier.create(groupMembersService.groups("test")).expectNextCount(1).verifyComplete();
     }
 
     @Test
     void relation() {
         given(this.groupMembersRepository.saveAll(Mockito.anyCollection())).willReturn(Flux.just(Mockito.mock(GroupMembers.class)));
 
-        StepVerifier.create(userGroupService.relation("test", Collections.singleton(1L)))
+        StepVerifier.create(groupMembersService.relation(Mockito.anyLong(), Set.of("test")))
                 .expectNextCount(1).verifyComplete();
     }
 }
